# medical-app

./: .gitignore  pyproject.toml
apps/: urls.py
apps/doctors/: models.py
apps/pharmacy/: admin.py  models.py  serializers.py  urls.py  views.py
apps/pharmacy/migrations/: 0001_initial.py
apps/users/: admin.py  apps.py  filters.py  models.py  permission.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_doctor_image.py  0002_favoriteproduct.py  0003_alter_booking_date_alter_booking_time.py
apps/users/serializers/: __init__.py  auth.py  booking.py  clients.py  doctors.py  favorite.py  hospitals.py  pharmacies.py  pharmacy.py  profiles.py  reser_password.py  users.py  wallet.py
apps/users/views/: __init__.py  auth.py  booking.py  clients.py  doctor_category.py  doctors.py  favorite.py  hospitals.py  permission.py  pharmacies.py  pharmacy.py  profiles.py  reset_password.py  users.py  wallet.py
root/: settings.py  urls.py
